--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -33,22 +33,23 @@
       <div class="header">Look at this awesome dog!</div>
         <figure>
           <img href="file:///Users/scarlethawk/Desktop/Photo%20Saves/Hank.JPEG" alt="Photo of Hank" />
-            <figcaption>
-              Hank hanging out on the couch & being chill.
-              </figcaption>
-                </figrue>
-              </article>
-</main>
+          <figcaption>
+            Hank hanging out on the couch & being chill.
+          </figcaption>
+        </figrue>
+      </div>
+    </article>
+  </main>
   <aside id="supporting">
     <p><h2>Facts About Me</h2></p>
     <!--Hint: Don't repeat classes on all inner elements that share a common parent-->
     <ul>
       <li class="quick-facts"><p><b> Quick Facts: </b></p>
-        <!-- Hint: Close up spaces between content and HTML tags on the same line-->
-        <li class="quick-facts"> Interested in cybersecurity </li>
-          <li class="quick-facts"> Hate cold winters </li>
-<li class="quick-facts" > Always running late </li></li>
-      </ul>
+      <!-- Hint: Close up spaces between content and HTML tags on the same line-->
+      <li class="quick-facts"> Interested in cybersecurity </li>
+      <li class="quick-facts"> Hate cold winters </li>
+      <li class="quick-facts" > Always running late </li></li>
+    </ul>
   </aside>
   <footer id="footer">
     Site content and design &copy; by me.
