--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -6,8 +6,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link rel="stylesheet" href="screen.css" />
+</head>
 <body>
-<h1><a href="http://example.com/index.html" rel="home">HTML Antipatterns</a></h1>
+  <h1><a href="http://example.com/index.html" rel="home">HTML Antipatterns</a></h1>
   <header id="header">
     <nav id="navigation">
       <ul>
@@ -29,7 +30,7 @@
       </p>
     </article>
     <!--Hint: Watch formatting, spacing, and tag completeness-->
-    <article id="my dog"
+    <article id="my dog">
       <div class="header">Look at this awesome dog!</div>
         <figure>
           <img href="file:///Users/scarlethawk/Desktop/Photo%20Saves/Hank.JPEG" alt="Photo of Hank" />
@@ -44,11 +45,11 @@
     <p><h2>Facts About Me</h2></p>
     <!--Hint: Don't repeat classes on all inner elements that share a common parent-->
     <ul>
-      <li class="quick-facts"><p><b> Quick Facts: </b></p>
+      <li class="quick-facts"><p><b> Quick Facts:</b></p>
       <!-- Hint: Close up spaces between content and HTML tags on the same line-->
-      <li class="quick-facts"> Interested in cybersecurity </li>
-      <li class="quick-facts"> Hate cold winters </li>
-      <li class="quick-facts" > Always running late </li></li>
+      <li class="quick-facts">Interested in cybersecurity</li>
+      <li class="quick-facts">Hate cold winters</li>
+      <li class="quick-facts">Always running late</li>
     </ul>
   </aside>
   <footer id="footer">
