--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -18,8 +18,7 @@
       </ul>
     </nav>
   </header>
-  <!--Hint: Watch for duplicate and non-semantic classes and IDs-->
-  <main id="home">
+  <main id="content">
     <article id="primary" class="green-background">
       <h2><b>About Me</b></h2>
       <h3><i>3rd-Year ITM Undergraduate</i></h3>
