--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -28,8 +28,7 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ullamcorper risus eget magna suscipit, in blandit mauris aliquam. Donec ac elementum libero. Maecenas sit amet leo iaculis, pulvinar magna non, tristique justo. Sed iaculis odio nec suscipit malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
       </p>
     </article>
-    <!--Hint: Watch formatting, spacing, and tag completeness-->
-    <article id="my dog">
+    <article id="my-dog">
       <div class="header">Look at this awesome dog!</div>
         <figure>
           <img href="file:///Users/scarlethawk/Desktop/Photo%20Saves/Hank.JPEG" alt="Photo of Hank" />
