--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -31,7 +31,7 @@
     <article id="my-dog">
       <div class="header">Look at this awesome dog!</div>
         <figure>
-          <img href="file:///Users/scarlethawk/Desktop/Photo%20Saves/Hank.JPEG" alt="Photo of Hank" />
+          <img src="/assets/img/hank-7680.jpg" alt="Photo of Hank the dog" />
           <figcaption>
             Hank hanging out on the couch & being chill.
           </figcaption>
