--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -22,7 +22,7 @@
     <article id="primary" class="green-background">
       <h2><b>About Me</b></h2>
       <h3><i>3rd-Year ITM Undergraduate</i></h3>
-      <h4>Majoring in Cybersecurity</h4><br />
+      <h4>Majoring in Cybersecurity</h4>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ullamcorper risus eget magna
         suscipit, in blandit mauris aliquam. Donec ac elementum libero. Maecenas sit amet leo
