Replace use of banned <div> tag with <h2>

--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -31,7 +31,7 @@
       </p>
     </article>
     <article id="my-dog">
-      <div class="header">Look at this awesome dog!</div>
+      <h2>Look at this awesome dog!</h2>
       <figure>
         <img src="/assets/img/hank-7680.jpg" alt="Photo of Hank the dog" />
         <figcaption>
