Replace ill-formed ampersand with plain "and"

--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -35,7 +35,7 @@
       <figure>
         <img src="/assets/img/hank-7680.jpg" alt="Photo of Hank the dog" />
         <figcaption>
-          Hank hanging out on the couch & being chill.
+          Hank hanging out on the couch and being chill.
         </figcaption>
       </figure>
     </article>
