Exchange `my-dog` and `supporting` items

--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -32,25 +32,28 @@
         ipsum dolor sit amet, consectetur adipiscing elit.
       </p>
     </article>
-    <article id="my-dog">
-      <h2>Look at this awesome dog!</h2>
-      <figure>
-        <img src="/assets/img/hank-7680.jpg" alt="Photo of Hank the dog" />
-        <figcaption>
-          Hank hanging out on the couch and being chill.
-        </figcaption>
-      </figure>
+
+    <article id="supporting">
+      <h2>Quick Facts:</h2>
+      <!--Hint: Don't repeat classes on all inner elements that share a common parent-->
+      <ul>
+        <li class="quick-facts">Interested in cybersecurity</li>
+        <li class="quick-facts">Hate cold winters</li>
+        <li class="quick-facts">Always running late</li>
+      </ul>
     </article>
   </main>
-  <aside id="supporting">
-    <h2>Quick Facts About Me</h2>
-    <!--Hint: Don't repeat classes on all inner elements that share a common parent-->
-    <ul>
-      <li class="quick-facts">Interested in cybersecurity</li>
-      <li class="quick-facts">Hate cold winters</li>
-      <li class="quick-facts">Always running late</li>
-    </ul>
+
+  <aside id="my-dog">
+    <h2>Look at this awesome dog!</h2>
+    <figure>
+      <img src="/assets/img/hank-7680.jpg" alt="Photo of Hank the dog" />
+      <figcaption>
+        Hank hanging out on the couch and being chill.
+      </figcaption>
+    </figure>
   </aside>
+
   <footer id="footer">
     Site content and design &copy; by me.
   </footer>
