--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -35,11 +35,10 @@
 
     <article id="supporting">
       <h2>Quick Facts:</h2>
-      <!--Hint: Don't repeat classes on all inner elements that share a common parent-->
-      <ul>
-        <li class="quick-facts">Interested in cybersecurity</li>
-        <li class="quick-facts">Hate cold winters</li>
-        <li class="quick-facts">Always running late</li>
+      <ul class="quick-facts">
+        <li>Interested in cybersecurity</li>
+        <li>Hate cold winters</li>
+        <li>Always running late</li>
       </ul>
     </article>
   </main>
