Fix stylistic issues in copyright notice

--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -54,7 +54,7 @@
   </aside>
 
   <footer id="footer">
-    Site content and design &copy; by me.
+    Site content and design © 2201 Jonathan Doseph.
   </footer>
 </body>
 </html>
