Remove non-semantic class from primary article

--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -18,7 +18,7 @@
     </nav>
   </header>
   <main id="content">
-    <article id="primary" class="green-background">
+    <article id="primary">
       <h2>About Me</h2>
       <ul id="about-me-details">
         <li id="about-me-occupation">3rd-Year ITM Undergraduate</li>
